# marketdecision

./: CMakeLists.txt  LICENSE  README.md  tests.ods
includes/: Layer.h  MarixToVector.h  Matrix.h  MultiplyMatrix.h  NeuralNetwork.h  Neuron.h  general.h  utils.h
src/: Layer.cpp  Matrix.cpp  MatrixToVector.cpp  MultiplyMatrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp  utils.cpp
